--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
+</head>
 <body>
 
-<p>The pre tag preserves both spaces and line breaks:</p>
-
-<pre>
-   My Bonnie lies over the ocean.
-
-   My Bonnie lies over the sea.
-
-   My Bonnie lies over the ocean.
-   
-   Oh, bring back my Bonnie to me.
-</pre>
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
